# whiteboard

./: COPYING  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
automation/: update_repo_remote.sh
debian/: changelog  control  rules  whiteboard.install
etc/: Makefile.am  Makefile.in  com.nokia.whiteboard.service.in
include/: Makefile.am  Makefile.in  access_sib.h  dbushandler.h  whiteboard_control.h  whiteboard_sib_handler.h
rpm/: whiteboard.spec
src/: Makefile.am  Makefile.in  access_sib.c  dbushandler.c  main.c  whiteboard_control.c  whiteboard_sib_handler.c
